Add option to ignore invalid SSL cert on grafana service

--- a/action.yml
+++ b/action.yml
@@ -31,6 +31,10 @@ inputs:
       Id of previously created annotation to update the "timeEnd" for current
       time.
     required: false
+  ignoreSslCert:
+    description: Ignores invalid grafana SSL certificate
+    default: 'false'
+    required: false
 outputs:
   annotation-id:
     description: >-
